--- a/style.css
+++ b/style.css
@@ -52,8 +52,13 @@ a {
   color: var(--oxford-blue);
 }
 
-.navbar-nav .nav-link {
+.nav-link {
+  color: var(--cadet-gray);
+}
+.nav-link:hover {
   color: var(--oxford-blue);
+  font-weight: bold;
+  margin: 0 1erm;
 }
 .navbar-nav .nav-link.disabled {
   color: var(--alice-blue);
